Ejercicio 14 copiado Note

--- a/Tarea01/Main.tex
+++ b/Tarea01/Main.tex
@@ -2045,6 +2045,13 @@ Como podemos apreciar los valores de $\alpha_{3}$ no son los mismos, y esto es d
 	\frac{3}{2} & -4 & 2\\
 	1 & -2 & 1
 	\end{pmatrix} \text{ es la inversa de } \begin{pmatrix} 0 & -2 & 4 \\ 1 & 1 & -1 \\ 2 & 4 & -5 \end{pmatrix}  \]
+	\begin{ejercicio}{14}
+		Calcular el determinante de las siguientes matrices 
+	\end{ejercicio}
+	\noindent a) $\begin{pmatrix} 6 & -3 \\ 2 & 4 \end{pmatrix}$\\
+	b) $\begin{pmatrix} -5 & 2 \\ 6 & 1 \end{pmatrix}$ \\
+	c)$\begin{pmatrix} 0 & 1 & 2 \\ -1 & 0 & -3 \\ 2 & 3 & 0 \end{pmatrix}$\\
+	d) $\begin{pmatrix} 0 & 2 & 1 & 3 \\ 1 & 0 & -2 & 2 \\ 3 & -1 & 0 & 1 \\ -1 & 1 & 2 & 0 \end{pmatrix}$\\
 \end{document}
 
 
