--- a/Tarea01/Tarea1.tex
+++ b/Tarea01/Tarea1.tex
@@ -92,12 +92,12 @@ Ayud. Irving Hernández Rosa \\ [0.2cm]
 % Problema catorce
 % -----------------------------------------------------
 
-\item Calcular el determinante de las siguientes matrices 
+\item 
 \begin{tasks}(4)
-\task $\begin{pmatrix} 6 & -3 \\ 2 & 4 \end{pmatrix}$
-\task $\begin{pmatrix} -5 & 2 \\ 6 & 1 \end{pmatrix}$ 
-\task $\begin{pmatrix} 0 & 1 & 2 \\ -1 & 0 & -3 \\ 2 & 3 & 0 \end{pmatrix}$ 
-\task $\begin{pmatrix} 0 & 2 & 1 & 3 \\ 1 & 0 & -2 & 2 \\ 3 & -1 & 0 & 1 \\ -1 & 1 & 2 & 0 \end{pmatrix}$ 
+\task 
+\task
+\task  
+\task 
 \end{tasks}
 % ---------------------------------------------------
 % Problema quince
