--- a/Tarea01/Main.tex
+++ b/Tarea01/Main.tex
@@ -2351,6 +2351,70 @@ Como podemos apreciar los valores de $\alpha_{3}$ no son los mismos, y esto es d
 	Por el teorema mencionado, para encontrar los valores propios de A, primero calculemos:\\
 	$A- \lambda Id_{n}= \begin{pmatrix} 1 & 2 \\ 3 & 2 \end{pmatrix} - \lambda \begin{pmatrix} 1 & 0 \\ 0 & 1 \end{pmatrix} = \begin{pmatrix} 1 & 2 \\ 3 & 2 \end{pmatrix} - \begin{pmatrix} \lambda & 0 \\ 0 & \lambda \end{pmatrix} = \begin{pmatrix} 1-\lambda & 2 \\ 3 & 2-\lambda \end{pmatrix} \\$
 	Entonces:\\
+	\begin{center}
+	$det \begin{pmatrix} 1-\lambda & 2 \\ 3 & 2-\lambda \end{pmatrix} = 0$
+	\end{center}
+	Usando la definición de determinante en $M_{2*2}$ tenemos que:\\
+	$(1-\lambda)(2-\lambda)-(3)(2)= 0$\\
+	Simplificando la expresión;\\
+	$\lambda^{2}-3\lambda-4=0$\\
+	$(\lambda+1)(\lambda-4)=0$\\
+	Al resolver la ecuación por factorización, concluimos que los \textbf{valores propios de A son $\lambda_{1}= -1$ y $\lambda_{2}=4$}\\
+	Ahora calculemos el conjunto de vectores propios. Tenemos que sustituir $\lambda_{1}$ y $\lambda_{2}$ en $(A-\lambda Id_{n})(\vec{v})=\vec{0}$\\
+	Primero hagamos el cálculo para $\lambda_{1}=-1$:\\
+	\begin{center}
+	$\begin{pmatrix} 1-(-1) & 2 \\ 3 & 2-(-1) \end{pmatrix} \begin{pmatrix}	X_{1} \\ X_{2} \end{pmatrix}= \begin{pmatrix}	0 \\ 0	\end{pmatrix}$
+	\end{center} 
+	\begin{center}
+	$\begin{pmatrix} 2 & 2 \\ 3 & 3 \end{pmatrix} \begin{pmatrix}	X_{1} \\ X_{2} \end{pmatrix}= \begin{pmatrix}	0 \\ 0	\end{pmatrix}$
+	\end{center}
+	Obtenemos el siguiente sistema de ecuaciones;
+	\begin{align*}
+	2x_{1}+2x_{2}= 0\\
+	3x_{1}+3x_{2}=0
+	\end{align*}
+	Multiplicamos 3 veces el renglón 1, -2 veces el renglón 3 y sumamos el renglón 1 al renglón 2.
+	\begin{align*}
+	6x_{1}+6x_{2}= 0
+	\end{align*}
+	Es fácil apreciar que $x_{1}=-x_{2}$. Entonces como $x_{1}$ depende de $x_{2}$, el sistema tiene tantas soluciones como $\mathbb{R}$, menos "0"  por definición. Por tanto tomamos $x_{1}= 1$ y $x_{2}=-1$
+	\begin{center}
+		$\therefore \vec{V_{1}} = \begin{pmatrix}	1 \\ -1	\end{pmatrix}$
+	\end{center}
+	Ahora hagamos el cálculo para $\lambda_{2}=4$\\
+	\begin{center}
+		$\begin{pmatrix} 1-4 & 2 \\ 3 & 2-4 \end{pmatrix} \begin{pmatrix}	X_{1} \\ X_{2} \end{pmatrix}= \begin{pmatrix}	0 \\ 0	\end{pmatrix}$
+	\end{center} 
+	\begin{center}
+		$\begin{pmatrix} -3 & 2 \\ 3 & -2 \end{pmatrix} \begin{pmatrix}	X_{1} \\ X_{2} \end{pmatrix}= \begin{pmatrix}	0 \\ 0	\end{pmatrix}$
+	\end{center}
+	Obtenemos el siguiente sistema de ecuaciones;
+	\begin{align*}
+	-3x_{1}+2x_{2}= 0\\
+	3x_{1}-2x_{2}=0
+	\end{align*}
+	Sumamos el renglón 1 al renglón 2.
+	\begin{align*}
+	3x_{1}-2x_{2}= 0
+	\end{align*}
+	Es fácil apreciar que $x_{1}= \dfrac{2x_{2}}{3}$. Como en el caso pasado, el sistema tiene tantas soluciones como $\mathbb{R}$. Entonces tomamos $x_{1}=2$ y $x_{2}=3$.
+	\begin{center}
+		$\therefore \vec{V_{2}} = \begin{pmatrix}	2 \\ 3	\end{pmatrix}$
+	\end{center}
+	Por último calcularemos la matriz diagonal, pero primero calcularemos $Q^{-1}$ con la proposición:\\
+	$Q^{-1}=\dfrac{1}{det(Q)} \begin{pmatrix}	d & -b \\ -c & a \end{pmatrix}$     si  $A = \begin{pmatrix} 	a & b \\ c & d \end{pmatrix}$\\
+	Entonces:\\
+	
+	$Q = \begin{pmatrix} 1 & 2 \\ -1 & 3 \end{pmatrix}$ \\        $det(Q) =(1)(3)-(-1)(2)= 5$\\
+	Ahora calculemos la matriz diagonal:\\
+	\begin{center}
+	$\frac{1}{5}\begin{pmatrix}	3 & -2 \\ 1 & 1 \end{pmatrix} \begin{pmatrix}	1 & 2 \\ 3 & 2 \end{pmatrix} \begin{pmatrix} 	1 & 2 \\ -1 & 3	\end{pmatrix} = \frac{1}{5} \begin{pmatrix}
+	3 & -2 \\ 1 & 1 \end{pmatrix} \begin{pmatrix}
+	-1 & 8 \\ 1 & 12 \end{pmatrix}= \dfrac{1}{5}\begin{pmatrix} -5 & 0 \\ 0 & 20\end{pmatrix}$  
+	\end{center}
+	\begin{center}
+	$\therefore \begin{pmatrix} -1 & 0 \\ 0 & 4 	\end{pmatrix}$ es la matriz diagonal.
+	\end{center}
 	
 \end{document}
 
